[package]
edition = "2021"
name = "femark"
version = "0.0.0"

[lib]
crate-type = ["rlib"]

[dependencies]
eyre = "0.6.8"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.4.3", default-features = false, features = ["napi4"] }
napi-derive = "2.4.1"
once_cell = "1.12.0"
pulldown-cmark = "0.9.1"
serde = {version="1.0.137", features=["derive"]}
slug = "0.1.4"
thiserror = "1.0.31"
tracing = "0.1.35"
tree-sitter = "0.23.2"
tree-sitter-c = "0.23.4"
tree-sitter-go = "0.23.4"
tree-sitter-highlight = "0.23.2"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.23.0"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.23.3"
tree-sitter-typescript = "0.23.2"

[build-dependencies]
napi-build = "2.0.0"

[profile.release]
lto = true
